// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Button - test Button Primary - snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#18bd18",
      "borderColor": "#18bd18",
      "borderRadius": 24,
      "borderWidth": 2,
      "justifyContent": "center",
      "maxWidth": "90%",
      "minHeight": 48,
      "minWidth": "30%",
      "opacity": 1,
      "padding": 0,
      "paddingLeft": 20,
      "paddingRight": 20,
      "width": "80%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 0,
        "minHeight": 48,
        "minWidth": 48,
        "padding": 0,
      }
    }
  >
    <Text
      style={
        {
          "color": "#011401",
          "fontSize": 16,
          "fontWeight": "600",
          "textAlign": "center",
          "textTransform": "none",
        }
      }
    >
      Primary button
    </Text>
  </View>
</View>
`;

exports[`Component Button - test Button Secondary - snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#031124",
      "borderColor": "#18bd18",
      "borderRadius": 24,
      "borderWidth": 2,
      "justifyContent": "center",
      "maxWidth": "90%",
      "minHeight": 48,
      "minWidth": "30%",
      "opacity": 1,
      "padding": 0,
      "paddingLeft": 20,
      "paddingRight": 20,
      "width": "80%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 0,
        "minHeight": 48,
        "minWidth": 48,
        "padding": 0,
      }
    }
  >
    <Text
      style={
        {
          "color": "#18bd18",
          "fontSize": 16,
          "fontWeight": "600",
          "textAlign": "center",
          "textTransform": "none",
        }
      }
    >
      Secondary button
    </Text>
  </View>
</View>
`;
